--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -1,3 +1,11 @@
-.hidden{
-    display: none;
+main{
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+
+    .container{
+        display: flex;
+        justify-content: center;
+
+    }
 }
