more layout changes
added a nice border and defined heights of layout

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -23,9 +23,42 @@ main{
         padding: 1em;
     }
 
+    @mixin pixel-border($top: false){
+        position: relative;
+
+        @if $top {
+            border-top: 4px solid #5a5353;
+        } @else {
+            border-bottom: 4px solid #5a5353;
+        }
+
+        &:before{
+            content: " ";
+            position: absolute;
+            z-index: -1;
+
+            @if $top {
+                top:0;
+            } @else {
+                bottom: 0;
+            }
+
+            left: 0;
+            right: 0;
+            border-top: 4px solid #302c2e;
+        }
+    }
+
     #navContainer{
         flex-direction: row;
         justify-content: end;
+        @include pixel-border();
+
+    }
+
+    #statContainer{
+        min-height: 200px;
+        @include pixel-border();
     }
 
     #cheeseContainer{
@@ -36,5 +69,14 @@ main{
 
         flex-grow: 1;
         background: radial-gradient();
+    }
+
+    #upgradeContainer{
+        @include pixel-border(true);
+
+        padding-left: 10vw;
+        padding-right: 10vw;
+
+        min-height: 400px;
     }
 }
