--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -62,6 +62,8 @@ main{
     }
 
     #cheeseContainer{
+        justify-content: center;
+        
         #counterLbl{
             font-family: $font-fredoka;
             font-size: 2em;
