--- a/src/style/_buttons.scss
+++ b/src/style/_buttons.scss
@@ -22,6 +22,28 @@
         width: $iconSize;
         background-position: center;
     }
+
+    &-clicker{
+        height: 70px;
+        width: 250px;
+        background-color: #7d7071;
+        border: 2px solid #5a5353;
+        cursor: pointer;
+        user-select: none;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        &:hover{
+            background-color: #a0938e;
+            border: 2px solid #7d7071;
+        }
+
+        &:active{
+            background-color: #7d7071;
+            border: 2px solid #5a5353;
+        }
+    }
 }
 
 #saveBtn{
