added icons to buttons

--- a/src/style/_buttons.scss
+++ b/src/style/_buttons.scss
@@ -57,7 +57,14 @@
             left: 1px;
             height: 64px;
             width: 64px;
-            border: 1px red solid;
+
+            $icons: "autoclicker","mouse","cow","mine","hedgefund";
+
+            @each $icon in $icons {
+                &-#{$icon}{
+                    background-image: url('../img/icon-#{$icon}.png');
+                }
+            }
         }
 
         .label{
