--- a/src/style/_toast.scss
+++ b/src/style/_toast.scss
@@ -4,13 +4,31 @@
     left: 10px;
 
     .toast{
+        position: relative;
+        color: #cfc6b8;
+        padding: 4px;
         width: 200px;
         height: 50px;
-        background: gray;
+        background-image: url('../img/toast-bg.svg');
         margin-bottom: 5px;
         animation: fade-in-bottom 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) both;
         &.fade-out{
             animation: fade-out-bottom 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) both;
+        }
+
+        .closeBtn{
+            position: absolute;
+            right: 4px;
+            top: 4px;
+            width:16px;
+            height:16px;
+            background-image: url('../img/x.svg');
+            transition: ease-in-out;
+
+            &:hover{
+                filter: brightness(1.5);
+                cursor: pointer;
+            }
         }
     }
 }
@@ -18,24 +36,20 @@
 
 @keyframes fade-in-bottom {
     0% {
-        // transform: translateY(50px);
         margin-bottom: -50px;
         opacity: 0;
     }
     100% {
-        // transform: translateY(0);
         margin-bottom: 5px;
         opacity: 1;
     }
 }
 @keyframes fade-out-bottom {
     0% {
-        // transform: translateY(0);
         margin-bottom: 5px;
         opacity: 1;
     }
     100% {
-        // transform: translateY(50px);
         margin-bottom: -50px;
         opacity: 0;
     }
