--- a/src/style/_modal.scss
+++ b/src/style/_modal.scss
@@ -1,3 +1,5 @@
+  @use 'vars' as *;
+
   .modal {
     width: 400px;
     height: 400px;
@@ -5,5 +7,25 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: gray;
+    background-color: $color-gray;
+    background-clip: content-box;
+    border: 10px solid transparent;
+    border-image: url('../img/border.png') 30% round;
+
+    .modalCloseBtn{
+        position: absolute;
+        right: 4px;
+        top: 4px;
+        width:16px;
+        height:16px;
+        background-image: url('../img/x.png');
+        transition: ease-in-out;
+
+        filter: invert(1);
+
+        &:hover{
+            filter: brightness(1.5);
+            cursor: pointer;
+        }
+    }
   }
