--- a/src/style/_buttons.scss
+++ b/src/style/_buttons.scss
@@ -7,6 +7,7 @@
     width: $size;
     padding:0px;
     background-image: url('../img/icon-btn.png');
+    background-color: transparent;
     border: none;
 
     &:hover{
