--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -2,12 +2,29 @@ $font-fredoka: 'Fredoka One', cursive;
 $font-rubik: 'Rubik', sans-serif;
 
 ///colors
+///zughy32 palette with made up names
+
+$color-brown-woody: #472d3c;
+$color-brown-congo: #5e3643;
+$color-brown-spicy: #7a444a;
+$color-brown-matrix: #a05b53;
+$color-brown: #bf7958;
+$color-brown-porsche: #eea160;
+$color-brown-light: #f4cca1;
 
 $color-black: #302c2e;
-$color-dark: #5a5353;
-$color-darkgray: #7d7071;
+$color-gray-steel: #5a5353;
+$color-gray-dark: #7d7071;
 $color-gray: #a0938e;
+$color-gray-light: #cfc6b8;
 
-$color-lightgreen: #b6d53c;
+$color-green-dark: #397b44;
 $color-green: #71aa34;
-$color-darkgreen: #397b44;
+$color-green-light: #b6d53c;
+$color-green-mineral: #3c5956;
+
+$color-blue-ice:#dff6f5;
+$color-blue-sky:#8aebf1;
+$color-blue-water:#28ccdf;
+$color-blue:#3978a8;
+$color-blue-navy:#394778;
