--- a/src/style/_toast.scss
+++ b/src/style/_toast.scss
@@ -1,3 +1,5 @@
+@use 'vars' as *;
+
 #toasterContainer{
     position: fixed;
     bottom: 0;
@@ -9,7 +11,11 @@
         padding: 4px;
         width: 200px;
         height: 50px;
-        background-image: url('../img/toast-bg.png');
+
+        background-color: $color-gray-steel;
+        border: 2px solid transparent;
+        border-image: url('../img/toast-bg.png') 30% round;
+
         margin-bottom: 5px;
         animation: fade-in-bottom 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) both;
         &.fade-out{
